--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>topglobai-对话页</title>
+    <meta name="description" content="kimi人工智能, kimi智能助手, 通问千义, kimi,通千问义, 天工, copilot, claude官网, quillbot, perplexity, poe,cursor, 火山写作官网, dreamina, kimichat, 豆包ai，Gemini官网" />
+    <meta name="keywords" content="kimi人工智能, kimi智能助手, 通问千义, kimi,通千问义, 天工, copilot, claude官网, quillbot, perplexity, poe,cursor, 火山写作官网, dreamina, kimichat, 豆包ai，Gemini官网" />
     <script>
       (function(){var t=localStorage.getItem('theme');if(t==='dark')document.documentElement.setAttribute('data-theme','dark');})();
     </script>
