--- a/prise.html
+++ b/prise.html
@@ -793,7 +793,7 @@
                     <span class="usage-ref-item">约 37 次 Claude-Opus-4.5 对话</span>
                     <span class="usage-ref-item">约 6 次 Nano Banana Pro 图片生成</span>
                 </div>
-                <a href="https://topglobai.com/panel/topup" target="_blank" rel="noopener" class="perm-cta">立即购买</a>
+                <a href="https://api.topglobai.com/panel/topup/?amount=2000" target="_blank" rel="noopener" class="perm-cta">立即购买</a>
             </article>
             <article class="permanent-card">
                 <div class="perm-price">¥30</div>
@@ -805,7 +805,7 @@
                     <span class="usage-ref-item">约 62 次 Claude-Opus-4.5 对话</span>
                     <span class="usage-ref-item">约 10 次 Nano Banana Pro 图片生成</span>
                 </div>
-                <a href="https://topglobai.com/panel/topup" target="_blank" rel="noopener" class="perm-cta">立即购买</a>
+                <a href="https://api.topglobai.com/panel/topup/?amount=3000" target="_blank" rel="noopener" class="perm-cta">立即购买</a>
             </article>
             <article class="permanent-card">
                 <div class="perm-price">¥50</div>
@@ -817,7 +817,7 @@
                     <span class="usage-ref-item">约 125 次 Claude-Opus-4.5 对话</span>
                     <span class="usage-ref-item">约 20 次 Nano Banana Pro 图片生成</span>
                 </div>
-                <a href="https://topglobai.com/panel/topup" target="_blank" rel="noopener" class="perm-cta">立即购买</a>
+                <a href="https://api.topglobai.com/panel/topup/?amount=5000" target="_blank" rel="noopener" class="perm-cta">立即购买</a>
             </article>
         </div>
         <p class="usage-disclaimer" id="permanentDisclaimer" style="display: none;">上述对话次数、论文篇数、图片张数等均为参考值，实际消耗因模型与用法不同会有差异。</p>
@@ -830,9 +830,9 @@
         </p>
         <div class="subscription-content visible" id="subscriptionContent">
         <div class="pricing-grid">
-            <!-- 新人体验 -->
+            <!-- 基础包 air -->
             <article class="pricing-card">
-                <h2 class="card-name">新人体验</h2>
+                <h2 class="card-name">基础包 air</h2>
                 <p class="card-desc">新用户专享低价尝鲜，体验主流 AI 对话与轻量使用。仅限一次。</p>
                 <div class="card-price">
                     <div class="price-amount"><span class="price-value">¥1.9</span><span>/月</span></div>
@@ -853,14 +853,14 @@
                     <li><span class="icon check">✓</span> AI 翻译</li>
                     <li><span class="icon check">✓</span> AI 润色</li>
                 </ul>
-                <a href="https://topglobai.com/panel/topup" target="_blank" rel="noopener" class="card-cta">选择新人体验</a>
+                <a href="https://api.topglobai.com/panel/topup/?amount=190" target="_blank" rel="noopener" class="card-cta">选择基础包 air</a>
             </article>
 
-            <!-- 轻度使用（推荐） -->
+            <!-- 基础包 Pro（推荐） -->
             <article class="pricing-card featured">
                 <span class="card-badge">推荐</span>
-                <h2 class="card-name">轻度使用</h2>
-                <p class="card-desc">为轻度使用用户设计，满足日常对话与轻量创作。</p>
+                <h2 class="card-name">基础包 Pro</h2>
+                <p class="card-desc">为日常与轻量创作用户设计，满足对话与创作需求。</p>
                 <div class="card-price">
                     <div class="price-amount"><span class="price-value">¥3.9</span><span>/月</span></div>
                     <div class="price-quota">1000 积分/月</div>
@@ -880,13 +880,13 @@
                     <li><span class="icon check">✓</span> AI 翻译</li>
                     <li><span class="icon check">✓</span> AI 润色</li>
                 </ul>
-                <a href="https://topglobai.com/panel/topup" target="_blank" rel="noopener" class="card-cta">选择轻度版 →</a>
+                <a href="https://api.topglobai.com/panel/topup/?amount=390" target="_blank" rel="noopener" class="card-cta">选择基础包 Pro →</a>
             </article>
 
-            <!-- 专业使用 Ultra -->
+            <!-- 基础包 ultra -->
             <article class="pricing-card ultra">
                 <span class="card-badge ultra-badge">ULTRA</span>
-                <h2 class="card-name">专业使用</h2>
+                <h2 class="card-name">基础包 ultra</h2>
                 <p class="card-desc">为专业用户设计，解锁全部能力，效率与体验兼顾。</p>
                 <div class="card-price">
                     <div class="price-amount"><span class="price-value">¥9.9</span><span>/月</span></div>
@@ -908,7 +908,7 @@
                     <li><span class="icon check">✓</span> AI 润色</li>
                     <li><span class="icon check">✓</span> 更多高级能力</li>
                 </ul>
-                <a href="https://topglobai.com/panel/topup" target="_blank" rel="noopener" class="card-cta">选择专业版</a>
+                <a href="https://api.topglobai.com/panel/topup/?amount=990" target="_blank" rel="noopener" class="card-cta">选择基础包 ultra</a>
             </article>
         </div>
         <p class="usage-disclaimer" id="subscriptionDisclaimer">上述对话次数、论文篇数、图片张数等均为参考值，实际消耗因模型与用法不同会有差异。</p>
