--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
               </span>
               创作音频
             </div>
+            <div class="side-promo" id="sidePromo">
+              <a class="side-promo-text" href="https://img.topglobai.com/prise.html" target="_blank" rel="noopener">topglobai接入openclaw教程来啦！超容易超简单！点击查看-&gt;</a>
+              <button type="button" class="side-promo-close" id="sidePromoClose" aria-label="关闭">×</button>
+            </div>
           </div>
 
           <div class="divider"></div>
