几个测试页

--- a/prise.html
+++ b/prise.html
@@ -739,11 +739,11 @@
 
     <div class="main-wrapper">
         <nav class="top-nav">
-            <a href="home3.html" class="back-link">
+            <a href="https://topglobai.com/" class="back-link">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M19 12H5M12 19l-7-7 7-7"/></svg>
                 返回首页
             </a>
-            <a href="home3.html" class="nav-logo" aria-label="TOPglobai 首页">
+            <a href="https://topglobai.com/" class="nav-logo" aria-label="TOPglobai 首页">
                 <img src="https://img.topglobai.com/logomain2.png" alt="TOPglobai">
                 <span class="brand-mini">TOPglobai</span>
             </a>
@@ -783,14 +783,14 @@
         </div>
 
         <p class="permanent-note" id="permanentNote" style="display: none;">
-            <strong>有效期说明：</strong>当你购买的<strong>月付包不够用</strong>时，可以购买<strong>加油包</strong>。购买加油包后，您当前所有的剩余积分（含基础包）将<strong>统一延期至加油包失效日（即购买之日起一个月）</strong>。例如：若您的基础包剩余 50 积分且原本将于 10 月 1 日过期，当您在 9 月 15 日购买加油包后，这 50 积分将与新积分一起「<strong>延期</strong>」，<strong>有效期统一延长至 10 月 15 日</strong>。
+            <strong>有效期说明：</strong>当你购买的<strong>月付包不够用</strong>时，可以购买<strong>加油包</strong>。购买加油包后，您当前所有的剩余积分（含基础包）将<strong>统一延期至加油包失效日（即购买之日起30天）</strong>。例如：若您的基础包剩余 50 积分且原本将于 10 月 1 日过期，当您在 9 月 15 日购买加油包后，这 50 积分将与新积分一起「<strong>延期</strong>」，<strong>有效期统一延长至 10 月 15 日</strong>。
         </p>
 
         <div class="permanent-grid" id="permanentGrid">
             <article class="permanent-card">
                 <div class="perm-price">¥20</div>
                 <div class="perm-quota">3000 积分</div>
-                <div class="perm-save">有效期一个月</div>
+                <div class="perm-save">有效期3天</div>
                 <div class="usage-ref">
                     <span class="usage-ref-item">约 125 次 Gemini-3-Flash 对话</span>
                     <span class="usage-ref-item">约 100 次 GPT-5.2-Codex 对话</span>
@@ -802,7 +802,7 @@
             <article class="permanent-card">
                 <div class="perm-price">¥30</div>
                 <div class="perm-quota">5000 积分</div>
-                <div class="perm-save">有效期一个月</div>
+                <div class="perm-save">有效期3天</div>
                 <div class="usage-ref">
                     <span class="usage-ref-item">约 200 次 Gemini-3-Flash 对话</span>
                     <span class="usage-ref-item">约 166 次 GPT-5.2-Codex 对话</span>
@@ -814,7 +814,7 @@
             <article class="permanent-card">
                 <div class="perm-price">¥50</div>
                 <div class="perm-quota">10000 积分</div>
-                <div class="perm-save">有效期一个月</div>
+                <div class="perm-save">有效期30天</div>
                 <div class="usage-ref">
                     <span class="usage-ref-item">约 400 次 Gemini-3-Flash 对话</span>
                     <span class="usage-ref-item">约 333 次 GPT-5.2-Codex 对话</span>
