--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>topglobai-对话页</title>
+    <title>yourdomain-对话页</title>
     <meta name="description" content="kimi人工智能, kimi智能助手, 通问千义, kimi,通千问义, 天工, copilot, claude官网, quillbot, perplexity, poe,cursor, 火山写作官网, dreamina, kimichat, 豆包ai，Gemini官网" />
     <meta name="keywords" content="kimi人工智能, kimi智能助手, 通问千义, kimi,通千问义, 天工, copilot, claude官网, quillbot, perplexity, poe,cursor, 火山写作官网, dreamina, kimichat, 豆包ai，Gemini官网" />
     <script>
@@ -59,7 +59,7 @@
             <div class="brand-left">
               <div class="logo">
                 <img
-                  src="https://img.topglobai.com/logomain2.png"
+                  src="https://img.yourdomain.com/logomain2.png"
                   alt="Logo"
                 />
               </div>
@@ -81,36 +81,25 @@
               新建会话
             </div>
             <div class="side-item" data-prompt="draw">
-              <span class="ico" style="color: #0ea5e9">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-brush-icon lucide-brush">
-                  <path d="m11 10 3 3"/>
-                  <path d="M6.5 21A3.5 3.5 0 1 0 3 17.5a2.62 2.62 0 0 1-.708 1.792A1 1 0 0 0 3 21z"/>
-                  <path d="M9.969 17.031 21.378 5.624a1 1 0 0 0-3.002-3.002L6.967 14.031"/>
-                </svg>
+              <span class="ico ico-img">
+                <img src="https://img.yourdomain.com/resource/NewImage-removebg-preview.png" alt="新建绘图" />
               </span>
               新建绘图
             </div>
             <div class="side-item" data-prompt="video">
-              <span class="ico" style="color: #8b5cf6">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="m22 8-6 4 6 4V8Z"/>
-                  <rect width="14" height="12" x="2" y="6" rx="2" ry="2"/>
-                </svg>
+              <span class="ico ico-img">
+                <img src="https://img.yourdomain.com/resource/NewVideo-removebg-preview.png" alt="创作视频" />
               </span>
               创作视频
             </div>
             <div class="side-item" data-prompt="audio">
-              <span class="ico" style="color: #e11d48">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                  <path d="M9 18V5l12-2v13"/>
-                  <circle cx="6" cy="18" r="3"/>
-                  <circle cx="18" cy="16" r="3"/>
-                </svg>
+              <span class="ico ico-img">
+                <img src="https://img.yourdomain.com/resource/NewVoice-removebg-preview.png" alt="创作音频" />
               </span>
               创作音频
             </div>
             <div class="side-promo" id="sidePromo">
-              <a class="side-promo-text" href="https://img.topglobai.com/prise.html" target="_blank" rel="noopener">topglobai接入openclaw教程来啦！超容易超简单！点击查看-&gt;</a>
+              <a class="side-promo-text" href="https://img.yourdomain.com/prise.html" target="_blank" rel="noopener">yourdomain接入openclaw教程来啦！超容易超简单！点击查看-&gt;</a>
               <button type="button" class="side-promo-close" id="sidePromoClose" aria-label="关闭">×</button>
             </div>
           </div>
@@ -160,7 +149,7 @@
             </div>
             <a
               class="balance-upgrade"
-              href="https://img.topglobai.com/prise.html"
+              href="https://img.yourdomain.com/prise.html"
               target="_blank"
               rel="noopener"
             >升级</a>
@@ -169,7 +158,7 @@
             class="mini-icons"
             aria-label="底部快捷按钮"
           >
-            <div class="mini mini-mobile" title="移动端访问" onclick="window.open('https:\/\/topglobai.com');">
+            <div class="mini mini-mobile" title="移动端访问" onclick="window.open('https:\/\/yourdomain.com');">
               <svg
                 viewBox="0 0 24 24"
                 fill="none"
@@ -180,11 +169,11 @@
                 <path d="M11 18h2" />
               </svg>
               <div class="mini-qr-pop" aria-hidden="true">
-                <img src="https://api.qrserver.com/v1/create-qr-code/?size=140x140&amp;data=https%3A%2F%2Ftopglobai.com%2F" alt="topglobai.com 二维码" width="140" height="140" />
-                <span class="mini-qr-hint">请在浏览器网址栏输入https://topglobai.com/ 或者使用浏览器扫描上方二维码</span>
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=140x140&amp;data=https%3A%2F%2Fyourdomain.com%2F" alt="yourdomain.com 二维码" width="140" height="140" />
+                <span class="mini-qr-hint">请在浏览器网址栏输入https://yourdomain.com/ 或者使用浏览器扫描上方二维码</span>
               </div>
             </div>
-            <div class="mini" title="客服" onclick="window.open('https:\/\/topglobai.com');">
+            <div class="mini" title="客服" onclick="window.open('https:\/\/yourdomain.com');">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#6b7280" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-headset-icon lucide-headset">
                 <path d="M3 11h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-5Zm0 0a9 9 0 1 1 18 0m0 0v5a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2h3Z"/>
                 <path d="M21 16v2a4 4 0 0 1-4 4h-5"/>
@@ -206,7 +195,7 @@
                 <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"/>
               </svg>
             </div>
-            <a class="mini" href="https://topglobai.com/panel" target="_blank" rel="noopener" title="我">
+            <a class="mini" href="https://yourdomain.com/panel" target="_blank" rel="noopener" title="我">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#6b7280" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-user-icon lucide-circle-user">
                 <circle cx="12" cy="12" r="10"/>
                 <circle cx="12" cy="10" r="3"/>
