--- a/admin.html
+++ b/admin.html
@@ -151,7 +151,7 @@
   </div>
   <script>
     (function () {
-      var ADMIN_KEY = 'uptu54XTNatwnxbSAwwz';
+      var ADMIN_KEY = '1234567890';
       var urlParams = new URLSearchParams(window.location.search);
       var key = urlParams.get('key') || '';
 
